<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vfdev.android.usersmanaging_with_parse.LoginSignUpWithTelNumActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:src="@android:drawable/sym_def_app_icon"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/RegisterPhoneNum"
            android:id="@+id/RegisterationLabel"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_weight="0" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phoneNumber"
                android:hint="@string/EnterPhoneNum"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_weight="8" />

            <!--TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswordAction"
                android:text="@string/ForgotPassword"
                android:onClick="onForgotPasswordClicked"
                android:clickable="true"
                android:layout_weight="8" /-->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:onClick="onRegisterClicked"
                android:background="@android:drawable/ic_menu_send"
                style="?android:attr/buttonStyleSmall"
                android:clickable="true"
                android:layout_weight="1" />

        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/Password"
            android:singleLine="true"
            android:maxLines="1"
            android:visibility="gone"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordAgain"
            android:hint="@string/PasswordAgain"
            android:singleLine="true"
            android:maxLines="1"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>
